WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88788
IndexedDB: Object stores are not successfully deleted
https://bugs.webkit.org/show_bug.cgi?id=88788
Summary
IndexedDB: Object stores are not successfully deleted
Joshua Bell
Reported
2012-06-11 10:52:55 PDT
IndexedDB: Object stores are not successfully deleted
Attachments
Patch
(1.93 KB, patch)
2012-06-11 11:32 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.95 KB, patch)
2012-06-11 12:04 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.06 KB, patch)
2012-06-11 13:31 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-06-11 11:32:21 PDT
Created
attachment 146882
[details]
Patch
Joshua Bell
Comment 2
2012-06-11 11:34:34 PDT
tony@ - r? Wanted to land this separately from
https://bugs.webkit.org/show_bug.cgi?id=83074
That patch will include a test for this scenario.
Tony Chang
Comment 3
2012-06-11 11:41:01 PDT
Comment on
attachment 146882
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=146882&action=review
> Source/WebCore/Modules/indexeddb/IDBLevelDBCoding.cpp:1117 > + return (result < 0) ? -1 : (result > 0) ? 1 : result;
Nit: I find nested ternary operators hard to read. I would probably do: if (result < 0) return -1; return (result > 0) ? 1 : 0;
Joshua Bell
Comment 4
2012-06-11 12:04:23 PDT
Created
attachment 146886
[details]
Patch for landing
Joshua Bell
Comment 5
2012-06-11 13:15:52 PDT
Comment on
attachment 146886
[details]
Patch for landing This can be tested by a chromium webkit_unit_test; will upload a new patch.
Joshua Bell
Comment 6
2012-06-11 13:31:52 PDT
Created
attachment 146894
[details]
Patch for landing
WebKit Review Bot
Comment 7
2012-06-11 15:42:10 PDT
Comment on
attachment 146894
[details]
Patch for landing Clearing flags on attachment: 146894 Committed
r120014
: <
http://trac.webkit.org/changeset/120014
>
WebKit Review Bot
Comment 8
2012-06-11 15:42:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug