IndexedDB: Object stores are not successfully deleted https://bugs.webkit.org/show_bug.cgi?id=88788

Reviewed by Tony Chang.

Source/WebCore:

Discovered while working on http://webkit.org/b/83074 - object stores are not
being deleted from the backing store. Deletion would succeed in the in-memory
data structures, but after closing/re-opening the backing store the object store
(but not its indexes/data) would reappear. Due to 83074, this isn't detectable
by DRT without a full restart.

Test: [chromium] webkit_unit_tests --gtest_filter='IDBLevelDBCodingTest.ComparisonTest'

* Modules/indexeddb/IDBLevelDBCoding.cpp:
(WebCore::IDBLevelDBCoding::ObjectStoreMetaDataKey::compare):

Source/WebKit/chromium:

* tests/IDBLevelDBCodingTest.cpp:
(IDBLevelDBCoding::TEST):


Canonical link: https://commits.webkit.org/106647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120014 268f45cc-cd09-0410-ab3c-d52691b4dbfc